Updated to 4.11.1 (by updates_builder)

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,4 @@
----
-sources:
+removed_sources:
   xfce4-panel-4.10.1.tar.bz2: b00cabae3b98a0adb83060466872bcaed47461ed
+sources:
+  xfce4-panel-4.11.1.tar.bz2: 3f8410332b7f76c42ec488fdfccc77776b22e05e
