--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
-sources:
+removed_sources:
   xfce4-panel-4.12.0.tar.bz2: 5f0e51c7948bc4e3c46cad93ee772573a23efbc1
+sources:
+  xfce4-panel-4.12.2.tar.bz2: 202ed7d5ca039d8ace6ed01ac00d1df02f419efd
